tests/semantic/inline_cycle1/inline_cycle1.err
Error: Inlined relations {m, n, o} are cyclically dependent in file inline_cycle1.dl at line 41
.decl m(x:number) inline
^------------------------
1 errors generated, evaluation aborted
